--- a/src/client/pages/race.html
+++ b/src/client/pages/race.html
@@ -20,7 +20,7 @@
         <h1>Start Your Pod Racer Sim</h1>
     </header>
     <main>
-        <section id="create-race">
+        <section class="create-race-section" id="create-race">
             <h2>Get Started</h2>
             <h3>Create Your Race</h3>
             <form id="create-race">
