feat: add F1 theme

--- a/src/client/pages/home.html
+++ b/src/client/pages/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,8 @@
     <link rel="stylesheet" href="assets/stylesheets/reset.css">
     <link rel="stylesheet" href="assets/stylesheets/index.css">
     <link rel="stylesheet" href="assets/stylesheets/home.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,9 +21,10 @@
         <section>
             <h2>Become a Pod Racer Champion</h2>
             <h3>Start your sim now with just two simple questions</h3>
-            <a class="button" href="/race">Start My Race</a>
+            <a class="button" href="/race" style="margin: 2rem">Start My Race</a>
         </section>
     </main>
     <footer></footer>
 </body>
+
 </html>
