--- a/src/client/pages/progress.html
+++ b/src/client/pages/progress.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="assets/stylesheets/reset.css">
     <link rel="stylesheet" href="assets/stylesheets/index.css">
     <link rel="stylesheet" href="assets/stylesheets/progress.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="/assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
@@ -44,4 +46,5 @@
     </main>
     <footer></footer>
 </body>
+
 </html>
