--- a/src/client/pages/race.html
+++ b/src/client/pages/race.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/stylesheets/create.css">
     <link rel="stylesheet" href="assets/stylesheets/progress.css">
     <link rel="stylesheet" href="assets/stylesheets/results.css">
+    <link rel="stylesheet" href="assets/stylesheets/race.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="/assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
@@ -47,4 +50,5 @@
     </main>
     <footer></footer>
 </body>
+
 </html>
