--- a/src/client/pages/results.html
+++ b/src/client/pages/results.html
@@ -8,6 +8,8 @@
     <title>View Your Race Progress</title>
     <link rel="stylesheet" href="assets/stylesheets/reset.css">
     <link rel="stylesheet" href="assets/stylesheets/index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="/assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
@@ -25,4 +27,5 @@
     </main>
     <footer></footer>
 </body>
+
 </html>
